--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+/.gitattributes     export-ignore
+/.gitignore         export-ignore
 *.dsp               eol=crlf
 *.dsw               eol=crlf
 *.props             eol=crlf
