--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -423,7 +423,7 @@ endif()
 # Enable C99
 if(CMAKE_VERSION VERSION_LESS "3.1")
 	if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
-		set(CMAKE_C_FLAGS "--std=gnu99 ${CMAKE_C_FLAGS}")
+		set(CMAKE_C_FLAGS "-std=c99 ${CMAKE_C_FLAGS}")
 	endif()
 else()
 	set(CMAKE_C_STANDARD 99)
