gen_irdump.c.inl -> gen_proj_names.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -299,7 +299,7 @@ endfunction()
 foreach(file
 	include/libfirm/nodes.h
 	ir/ir/gen_irnode.h
-	ir/ir/gen_irdump.c.inl
+	ir/ir/gen_proj_names.h
 	ir/ir/gen_irio.c.inl
 	ir/ir/gen_irnode.c)
 	gen_ir(${GEN_DIR}/${file})
