Adapt cmake source list to 7af7151a202833b5be1a2468e3864b9f09bff1cf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES
 	ir/adt/bipartite.c
 	ir/adt/bitset.c
 	ir/adt/cpset.c
+	ir/adt/deq.c
 	ir/adt/gaussjordan.c
 	ir/adt/gaussseidel.c
 	ir/adt/hungarian.c
