--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ before_build:
   - cmd: cmake -G "%CMAKE_GENERATOR_NAME%" ..
 
 build:
-  project: C:\projects\firm\build\firm.sln
+  project: C:\projects\firm\build\libfirm.sln
   verbosity: normal
 
 test: off
