--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,9 +30,7 @@ before_build:
   - cmd: cd C:\projects\firm
   - cmd: md build
   - cmd: cd build
-  - cmd: if "%platform%"=="Win32" set CMAKE_GENERATOR_NAME=Visual Studio 14 2015
-  - cmd: if "%platform%"=="x64"   set CMAKE_GENERATOR_NAME=Visual Studio 14 2015 Win64
-  - cmd: cmake -G "%CMAKE_GENERATOR_NAME%" ..
+  - cmd: cmake ..
 
 build:
   project: C:\projects\firm\build\libfirm.sln
