tests on unix only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -430,20 +430,22 @@ elseif(WIN32)
 	target_link_libraries(firm LINK_PUBLIC gnurx winmm)
 endif()
 
-enable_testing()
-add_custom_target(
-		check
-		${CMAKE_CTEST_COMMAND} -C $<CONFIG>
-		WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-)
-foreach(test ${TESTS})
-	# Replace `/` with a `.` so cmake accepts the target name
-	string(REPLACE "/" "." test-id ${test})
-	add_executable(${test-id} ${test}.c)
-	target_link_libraries(${test-id} LINK_PRIVATE firm)
-	add_test(test-${test-id} ${test-id})
-	add_dependencies(check ${test-id})
-endforeach(test)
+if(UNIX)
+	enable_testing()
+	add_custom_target(
+			check
+			${CMAKE_CTEST_COMMAND} -C $<CONFIG>
+			WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+	)
+	foreach(test ${TESTS})
+		# Replace `/` with a `.` so cmake accepts the target name
+		string(REPLACE "/" "." test-id ${test})
+		add_executable(${test-id} ${test}.c)
+		target_link_libraries(${test-id} LINK_PRIVATE firm)
+		add_test(test-${test-id} ${test-id})
+		add_dependencies(check ${test-id})
+	endforeach(test)
+endif()
 
 # Create install target
 set(INSTALL_HEADERS
