--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -260,7 +260,7 @@ set(TESTS
 # header, GEN_DIR is just the current BINARY_DIR. Feel free to change this back
 # to BINARY_DIR/gen when you figure out how to share the location with
 # cparser's CMakeLists.txt without duplication.
-set(GEN_DIR "${CMAKE_CURRENT_BINARY_DIR}")
+set(GEN_DIR "${CMAKE_CURRENT_BINARY_DIR}/gen")
 set(GEN_IR_DIR "${PROJECT_SOURCE_DIR}/scripts")
 set(IR_SPEC "${PROJECT_SOURCE_DIR}/scripts/ir_spec.py")
 set(GEN_TEMPLATEDIR "${PROJECT_SOURCE_DIR}/scripts/templates")
@@ -330,7 +330,6 @@ foreach(file
 endforeach(file)
 include_directories(
 	${GEN_DIR}/include/libfirm
-	${GEN_DIR}/include
 	${GEN_DIR}/ir/ir
 )
 
