fix the custom backend integration for the vhdl backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -426,6 +426,10 @@ add_backend(vhdl
 	ir/be/vhdl/vhdl_spec.pl
 	ir/be/vhdl/vhdl_transform.c
 	ir/be/vhdl/vhdl_transform.h
+	ir/be/vhdl/method_cloning.c
+	ir/be/vhdl/method_cloning.h
+	ir/be/vhdl/vhdl_bemain.c
+	ir/be/vhdl/vhdl_bemain.h
 )
 
 add_backend(TEMPLATE
