define VHDL backend nodes and node attributes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -430,6 +430,8 @@ add_backend(vhdl
 	ir/be/vhdl/method_cloning.h
 	ir/be/vhdl/vhdl_bemain.c
 	ir/be/vhdl/vhdl_bemain.h
+	ir/be/vhdl/vhdl_lower.c
+	ir/be/vhdl/vhdl_lower.h
 )
 
 add_backend(TEMPLATE
