--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -452,8 +452,8 @@ set(BUILD_SHARED_LIBS Off CACHE BOOL "whether to build shared libraries")
 add_library(firm ${SOURCES})
 if(UNIX)
 	target_link_libraries(firm LINK_PUBLIC m)
-elseif(WIN32)
-	target_link_libraries(firm LINK_PUBLIC gnurx winmm)
+elseif(WIN32 OR MINGW)
+	target_link_libraries(firm LINK_PUBLIC regex winmm)
 endif()
 
 enable_testing()
